--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "stock-price-predictor"
 version = "0.1.0"
 description = "A Python project for predicting stock prices using historical data."
-authors = [Jusung Hwang j.hwang-3@student.tudelt.nl]
+authors = ["Jusung Hwang <j.hwang-3@student.tudelt.nl>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/jusung-github/stock-price-js"
